objects/SFDC_Interaction__c.object
<CustomObject>
    <label>Interaction</label>
    <nameField>
        <displayFormat>SFDC-{0000}</displayFormat>
        <label>SFDC</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interaction</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>BE__c</fullName>
        <label>BE</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dx</fullName>
                </value>
                <value>
                    <fullName>INF</fullName>
                </value>
                <value>
                    <fullName>LST</fullName>
                </value>
                <value>
                    <fullName>MED</fullName>
                </value>
                <value>
                    <fullName>SVC</fullName>
                </value>
                <value>
                    <fullName>ONE</fullName>
                </value>
                <value>
                    <fullName>EH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>SFDC_Interaction_Lead</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Assigned</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SFDC_Interaction_user</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Working</fullName>
                </value>
                <value>
                    <fullName>Turnback</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Qualified</fullName>
                </value>
                <value>
                    <fullName>Abandoned</fullName>
                    <isActive>false</isActive>
                    <label>Abandoned</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>SFDC_Interaction_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_CO__c</fullName>
        <label>Last CO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timeline__c</fullName>
        <label>Timeline</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0-3 months</fullName>
                </value>
                <value>
                    <fullName>3-6 months</fullName>
                </value>
                <value>
                    <fullName>6-12 months</fullName>
                </value>
                <value>
                    <fullName>12+ months</fullName>
                </value>
                <value>
                    <fullName>We’ve already engaged a partner</fullName>
                </value>
                <value>
                    <fullName>We don’t have any current plans</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Opportunity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Global_Region__c</fullName>
        <label>Global Region</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Class__c</fullName>
        <label>Product Class</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rejected_Date__c</fullName>
        <label>Rejected Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Turnback_Date__c</fullName>
        <label>Turnback Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Business_Phone__c</fullName>
        <label>Business Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Conversion_SLA__c</fullName>
        <label>Conversion SLA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Warm SLA In-policy</fullName>
                </value>
                <value>
                    <fullName>Warm SLA Out-of-policy</fullName>
                </value>
                <value>
                    <fullName>Hot SLA In-policy</fullName>
                </value>
                <value>
                    <fullName>Hot SLA Out-of-policy</fullName>
                </value>
                <value>
                    <fullName>Warm SLA In-policy Completed</fullName>
                </value>
                <value>
                    <fullName>Hot SLA In-policy Completed</fullName>
                </value>
                <value>
                    <fullName>Warm SLA Out-of-policy Completed</fullName>
                </value>
                <value>
                    <fullName>Hot SLA Out-of-policy Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Number__c</fullName>
        <label>Product Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eloqua_Record_Id__c</fullName>
        <label>Eloqua Record Id</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Requested_Interests__c</fullName>
        <label>Requested Interests</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Qualification__c</fullName>
        <label>Primary Qualification</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Secondary_Qualification__c</fullName>
        <label>Secondary Qualification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Qualification_Stage__c</fullName>
        <label>Lead Qualification Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Engaged</fullName>
                </value>
                <value>
                    <fullName>Qualified Engaged</fullName>
                </value>
                <value>
                    <fullName>Qualified Lead - Warm</fullName>
                </value>
                <value>
                    <fullName>Qualified Lead - Hot</fullName>
                </value>
                <value>
                    <fullName>Zero Stage</fullName>
                </value>
                <value>
                    <fullName>Create/Plan</fullName>
                </value>
                <value>
                    <fullName>Qualify</fullName>
                </value>
                <value>
                    <fullName>Develop</fullName>
                </value>
                <value>
                    <fullName>Prove</fullName>
                </value>
                <value>
                    <fullName>Negotiation</fullName>
                </value>
                <value>
                    <fullName>Closed Won</fullName>
                </value>
                <value>
                    <fullName>Closed Lost</fullName>
                </value>
                <value>
                    <fullName>Abandoned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solution_Area_of_Interest__c</fullName>
        <label>Solution Area of Interest</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Air</fullName>
                </value>
                <value>
                    <fullName>Applied Genomics</fullName>
                </value>
                <value>
                    <fullName>Chemicals</fullName>
                </value>
                <value>
                    <fullName>Clinical Studies</fullName>
                </value>
                <value>
                    <fullName>Digital Lab</fullName>
                </value>
                <value>
                    <fullName>Energy</fullName>
                </value>
                <value>
                    <fullName>Forensics and Security</fullName>
                </value>
                <value>
                    <fullName>Geochemistry, Mining and Metals</fullName>
                </value>
                <value>
                    <fullName>Life Science Research</fullName>
                </value>
                <value>
                    <fullName>Material</fullName>
                </value>
                <value>
                    <fullName>Maternal Fetal Health</fullName>
                </value>
                <value>
                    <fullName>Newborn Screening</fullName>
                </value>
                <value>
                    <fullName>Pre-Clinical Drug Development</fullName>
                </value>
                <value>
                    <fullName>Pre-Clinical Drug Discovery</fullName>
                </value>
                <value>
                    <fullName>QA/QC Drug Manufacturing Process</fullName>
                </value>
                <value>
                    <fullName>Soil/Solids</fullName>
                </value>
                <value>
                    <fullName>Strategic Services</fullName>
                </value>
                <value>
                    <fullName>Water</fullName>
                </value>
                <value>
                    <fullName>Food</fullName>
                </value>
                <value>
                    <fullName>Food Quality</fullName>
                    <isActive>false</isActive>
                    <label>Food Quality</label>
                </value>
                <value>
                    <fullName>Food Safety</fullName>
                    <isActive>false</isActive>
                    <label>Food Safety</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Qualification_Stage_Date__c</fullName>
        <label>Lead Qualification Stage Date</label>
        <type>DateTime</type>
    </fields>
</CustomObject>